[project]
name = "attck-stix-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Donald Hawkins", email = "code@hawkins.pro" } ]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "mitreattack-python>=3.0.8",
    "requests>=2.32.3",
    "stix2>=3.0.1",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/attck_stix_agent" ]

[dependency-groups]
dev = [ "ruff>=0.9.10" ]

[project.scripts]
attck_stix_agent = "attck_stix_agent:__main__.main"
